# AEON

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE_QUICKSTART.md  LICENSE  README.md  SECURITY.md
a2g_sdk/: README.md  __init__.py  client.py  messages.py  pyproject.toml
a2g_sdk/examples/: __init__.py  basic_usage.py
aeon-engine/: Cargo.toml
aeon-engine/src/: a2g.rs  main.rs  risk_scorer.rs  server.rs  synapse.rs
core/: Cargo.toml
core/src/: capability.rs  gemma.rs  gemma3.rs  governance.rs  host_functions.rs  intent.rs  keyring.rs  ledger.rs  main.rs  policy.rs  server.rs  state.rs  synapse.rs  wasm_boundary.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  types.d.ts
dashboard/src/components/: AgentsList.tsx  Artifacts.tsx  ConstitutionEditor.tsx  Correlations.tsx  Escalations.tsx  ExecutiveDashboard.tsx  GovernanceModels.tsx  IntentMonitor.tsx  Marketplace.tsx  Policies.tsx  Sidebar.tsx  Teams.tsx
dashboard/src/hooks/: useNervousSystem.ts
dashboard/src/nodes/: AgentNode.tsx  GovernorNode.tsx  PolicyNode.tsx  ProxyNode.tsx
docs/: A2G_PROTOCOL.md  ARCHITECTURE.md
governance_model/: README.md  app.py  attack_test_suite.py  requirements.txt  risk_server.py  test_hybrid.py
governance_model/adapter/: README.md  adapter_config.json
governance_model/adapter/checkpoint-50/: scheduler.pt  trainer_state.json
governance_model/adapter/checkpoint-66/: adapter_config.json  trainer_state.json
governance_model/adapter/checkpoint-75/: tokenizer_config.json  trainer_state.json
mandates/: WATCHER.toml  adversarial_auditor_cell.toml  aeon.wit  agent.wit  agent_1.toml  agent_log_only.toml  architect_cell.toml  auditor_cell.toml  auto_fixer.toml  constitution.toml  dependency_auditor.toml  developer_cell.toml  js_worker_cell.toml  migration_cell.toml  parent_cell.toml  parent_cell_child.toml  repair_cell.toml  rosetta_dna.toml  rosetta_fibonacci.toml  test_crypto_sign.toml
scripts/: containerize_agent.sh
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: api-reference.md  intro.md  security.md
website/docs/a2g-protocol/: governance-flow.md  message-types.md  overview.md  risk-scoring.md
website/docs/getting-started/: configuration.md  installation.md  quickstart.md
website/docs/sdk/: python.md  rust.md
website/src/pages/: index.js
