[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2g-sdk"
version = "1.0.0"
description = "Python SDK for A2G (Agent-to-Governance) Protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vanaras AI", email = "founder@vanaras.ai"}
]
keywords = ["a2g", "governance", "ai", "agents", "aeon", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Vanaras-AI/AEON"
Documentation = "https://github.com/Vanaras-AI/AEON/blob/main/docs/A2G_PROTOCOL.md"
Repository = "https://github.com/Vanaras-AI/AEON"
Issues = "https://github.com/Vanaras-AI/AEON/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["a2g_sdk*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
