[package]
name = "aeon-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zip = "0.6"
ed25519-dalek = "2.1"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"
walkdir = "2.3"
tempfile = "3.8"
libc = "0.2"
chrono = "0.4"
wasmtime = "16.0"
wasmtime-wasi = "16.0"
cap-std = "2.0"
os_pipe = "1.1" 
ureq = { version = "2.10", features = ["json"] }
