[package]
name = "aeon-core"
version = "0.1.0"
edition = "2021"
[dependencies]
wasmtime = "16.0"
wasmtime-wasi = "16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
ureq = { version = "2.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
notify = "^6.1.1"
chrono = { version = "0.4.43", features = ["serde"] }
sha2 = "0.10.9"
lazy_static = "1.5.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
rust-mcp-sdk = "0.8.2"
async-trait = "0.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI / ML (The Cortical Implant)
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = "0.20.3"

# Cryptographic Identity (Sprint 2)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Queryable Ledger (Sprint 3)
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors"] }
futures = "0.3.31"

[dev-dependencies]
tokio-tungstenite = "0.20"
url = "2.4"
